# Quadruped-Robot-ROS-Gazebo

./: README.md
ROS package/Project2_Assembly/: CMakeLists.txt  package.xml
ROS package/Project2_Assembly/config/: fwd_kinematics.rviz  gaits.yaml  joint_names_Project2_Assembly.yaml
ROS package/Project2_Assembly/launch/: display.launch  fwd_kinematics.launch  fwd_test.launch  gazebo.launch  inv_kinematics.launch  quad_leg.launch
ROS package/Project2_Assembly/meshes/: base_link.STL  left_arm_dummy_link.STL  left_arm_link.STL  left_arm_link1.STL  left_arm_link2.STL  left_arm_link3.STL  left_arm_link4.STL  left_arm_link5.STL  left_front_dummy_link.STL  left_front_hip_link.STL  left_front_hip_link1.STL  left_front_knee_link.STL  left_front_knee_link1.STL  left_rear_dummy_link.STL  left_rear_hip_link.STL  left_rear_hip_link1.STL  left_rear_knee_link.STL  left_rear_knee_link1.STL  platform_link.STL  right_arm_dummy_link.STL  right_arm_link.STL  right_arm_link1.STL  right_arm_link2.STL  right_arm_link3.STL  right_arm_link4.STL  right_arm_link5.STL  right_front_dummy_link.STL  right_front_hip_link.STL  right_front_hip_link1.STL  right_front_knee_link.STL  right_front_knee_link1.STL  right_rear_dummy_link.STL  right_rear_hip_link.STL  right_rear_hip_link1.STL  right_rear_knee_link.STL  right_rear_knee_link1.STL
ROS package/Project2_Assembly/scripts/: fwd_kinematics_lf.py  fwd_kinematics_lf1.py  fwd_kinematics_lr.py  fwd_kinematics_rf .py  fwd_kinematics_rf.py  fwd_kinematics_rr.py  gait.py  gazebo_link_pose.py  ik_client.py  pose_pub.py  pose_sub.py  walk.py  walk1.py
(+18 files in other folders)
