<package format="2">
  <name>Project2_Assembly</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Project2_Assembly</p>
    <p>This package contains configuration data, 3D models and launch files
for Project2_Assembly robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
